Analyze results HS nodewise MSE & add pbar GridSearch

--- a/notebooks/shrinkage_node_wise_difference.ipynb
+++ b/notebooks/shrinkage_node_wise_difference.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2146,6 +2146,375 @@
     "print(mean_squared_error(y_tile, y_pred_dt))\n",
     "print(mean_squared_error(y_tile, y_pred_shrunk))\n",
     "print(mean_squared_error(y_tile, y_pred_nodewise))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# HS performance on regression dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from TreeModelsFromScratch.datasets import DATASETS_CLASSIFICATION, DATASETS_REGRESSION, DATASET_PATH\n",
+    "from imodels.util.data_util import get_clean_dataset\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "# ignore warnings regarding nested arrays\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\", category=np.VisibleDeprecationWarning) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Friedman 1 \n",
+    "(only 5 out of 10 features are important)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dset_name, dset_file, data_source = DATASETS_REGRESSION[0]\n",
+    "X_f1, y_f1, feat_names = get_clean_dataset(dset_file, data_source, DATASET_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Xf1_train, Xf1_test, yf1_train, yf1_test = train_test_split(X_f1, y_f1, test_size=0.2, random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6193046812566476"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Compare against regular RF without shrinkage\n",
+    "rf_f1 = RandomForest(n_trees=100, treetype=\"regression\", oob=False, random_state=1)\n",
+    "cv_f1 = cross_val_score_scratch(rf_f1, Xf1_train, yf1_train, 3, r2_score)\n",
+    "rf_f1.fit(Xf1_train, yf1_train)\n",
+    "np.mean(cv_f1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R2: 0.6732007367371438\n",
+      "MSE: 8.201290894611413\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = rf_f1.predict(Xf1_test)\n",
+    "print(\"R2:\", r2_score(yf1_test, y_pred))\n",
+    "print(\"MSE:\", mean_squared_error(yf1_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid = {\"HS_lambda\":[0.1,1,10,20,50,100]}\n",
+    "rf_f1_nodewise_mse = RandomForest(n_trees=100, treetype=\"regression\", oob=True, HS_nodewise_shrink_type=\"MSE_ratio\", random_state=1)\n",
+    "cv_results_f1 = GridSearchCV_scratch(rf_f1_nodewise_mse, grid, Xf1_train, yf1_train, 3, r2_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R2: 0.6507506302816862\n",
+      "MSE: 8.764694409716975\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = rf_f1_nodewise_mse.predict(Xf1_test)\n",
+    "print(\"R2:\", r2_score(yf1_test, y_pred))\n",
+    "print(\"MSE:\", mean_squared_error(yf1_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.1,)"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv_results_f1[\"best_param_comb\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.60204004, 0.59310657, 0.56397613, 0.46896451, 0.33913303,\n",
+       "       0.2436093 ])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv_results_f1[\"mean_test_scores\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Friedman 3 (all features are important)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dset_name, dset_file, data_source = DATASETS_REGRESSION[2]\n",
+    "X, y, feat_names = get_clean_dataset(dset_file, data_source, DATASET_PATH)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ignore warnings regarding nested arrays\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\", category=np.VisibleDeprecationWarning) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid = {\"HS_lambda\":[0.1,1,10,20,50,100]}\n",
+    "rf_nodewise_mse = RandomForest(n_trees=100, treetype=\"regression\", oob=True, HS_nodewise_shrink_type=\"MSE_ratio\", random_state=1)\n",
+    "cv_results = GridSearchCV_scratch(rf_nodewise_mse, grid, X_train, y_train, 3, r2_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.71381162157596"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred = rf_nodewise_mse.predict(X_test)\n",
+    "r2_score(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.027866188527696945"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "mean_squared_error(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'best_param_comb': (1,),\n",
+       " 'best_test_score': 0.7213923575573796,\n",
+       " 'best_test_scores': array([0.77933921, 0.88202539, 0.67902042, 0.58123931, 0.68010547,\n",
+       "        0.61679055, 0.88169178, 0.60714531, 0.78346556, 0.72310058]),\n",
+       " 'mean_test_scores': array([0.71186196, 0.72139236, 0.67311171, 0.67058581, 0.48248751,\n",
+       "        0.34709997, 0.35362734]),\n",
+       " 'param_combinations': [(0.1,), (1,), (5,), (10,), (20,), (50,), (100,)],\n",
+       " 'cv_scores_p_split': array([[ 0.88884601,  0.69429869,  0.71098872,  0.74250085,  0.82572238,\n",
+       "          0.5987789 ,  0.74274267,  0.79614796,  0.42879956,  0.68979389],\n",
+       "        [ 0.77933921,  0.88202539,  0.67902042,  0.58123931,  0.68010547,\n",
+       "          0.61679055,  0.88169178,  0.60714531,  0.78346556,  0.72310058],\n",
+       "        [ 0.6491746 ,  0.74990432,  0.55486976,  0.70547589,  0.80280022,\n",
+       "          0.76458293,  0.62841931,  0.72248106,  0.66321887,  0.49019018],\n",
+       "        [ 0.70118609,  0.60492058,  0.6170164 ,  0.55628703,  0.75842454,\n",
+       "          0.69273234,  0.74537378,  0.61778124,  0.75432527,  0.65781086],\n",
+       "        [ 0.64054304,  0.72894512,  0.70541183,  0.53305399,  0.61854093,\n",
+       "          0.4408911 ,  0.66331129,  0.5199831 , -0.59784055,  0.57203525],\n",
+       "        [ 0.52539936,  0.02747348,  0.42001299,  0.52643378,  0.52788354,\n",
+       "          0.62212423,  0.39875939,  0.45730142, -0.55566012,  0.52127161],\n",
+       "        [ 0.43755683,  0.36351355,  0.52978148,  0.04478248,  0.50038636,\n",
+       "          0.3144861 ,  0.40635633,  0.36552765,  0.25818066,  0.31570197]])}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cv_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0.6805145152499492,\n",
+       " 0.9171480661104654,\n",
+       " 0.6963941928047632,\n",
+       " 0.7179773921288995,\n",
+       " 0.7790523775028239,\n",
+       " 0.8808246509499713,\n",
+       " 0.7990345532259009,\n",
+       " 0.6158345722672612,\n",
+       " 0.7349139648774703,\n",
+       " 0.9166389596527713]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Compare against regular RF without shrinkage\n",
+    "rf = RandomForest(n_trees=100, treetype=\"regression\", oob=False, random_state=1)\n",
+    "cross_val_score_scratch(rf, X_train, y_train, 10, r2_score)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.777800381345531"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rf.fit(X_train, y_train)\n",
+    "y_pred = rf.predict(X_test)\n",
+    "r2_score(y_test, y_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.021635597148649557"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_squared_error\n",
+    "mean_squared_error(y_test, y_pred)"
    ]
   },
   {
