--- a/notebooks/shrinkage_node_wise_difference.ipynb
+++ b/notebooks/shrinkage_node_wise_difference.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -2157,7 +2157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2166,8 +2166,8 @@
     "from sklearn.metrics import mean_squared_error\n",
     "\n",
     "# ignore warnings regarding nested arrays\n",
-    "import warnings\n",
-    "warnings.filterwarnings(\"ignore\", category=np.VisibleDeprecationWarning) "
+    "#import warnings\n",
+    "#warnings.filterwarnings(\"ignore\", category=np.VisibleDeprecationWarning) "
    ]
   },
   {
@@ -2180,7 +2180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2190,7 +2190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2199,16 +2199,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6193046812566476"
+       "0.6190922212939524"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2223,15 +2223,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2: 0.6732007367371438\n",
-      "MSE: 8.201290894611413\n"
+      "R2: 0.6689286800359233\n",
+      "MSE: 8.2983554806065\n"
      ]
     }
    ],
@@ -2243,26 +2243,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "grid = {\"HS_lambda\":[0.1,1,10,20,50,100]}\n",
+    "grid = {\"HS_lambda\":[0.1,1,10]}\n",
     "rf_f1_nodewise_mse = RandomForest(n_trees=100, treetype=\"regression\", oob=True, HS_nodewise_shrink_type=\"MSE_ratio\", random_state=1)\n",
     "cv_results_f1 = GridSearchCV_scratch(rf_f1_nodewise_mse, grid, Xf1_train, yf1_train, 3, r2_score)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2: 0.6507506302816862\n",
-      "MSE: 8.764694409716975\n"
+      "R2: 0.7296873088009879\n",
+      "MSE: 6.310458867238987\n"
      ]
     }
    ],
@@ -2274,7 +2274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2283,7 +2283,7 @@
        "(0.1,)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2294,17 +2294,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.60204004, 0.59310657, 0.56397613, 0.46896451, 0.33913303,\n",
-       "       0.2436093 ])"
+       "array([0.63776561, 0.62658319, 0.48423149])"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2856,7 +2855,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.6.13 ('venv_master': virtualenv)",
+   "display_name": "Python 3.10.6 64-bit ('hs_shrinkage')",
    "language": "python",
    "name": "python3"
   },
@@ -2870,15 +2869,14 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.10.6"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "d94c025da75328d2d5dd40c3f3401a47786a54e19e1715d7009c05d4603d2d1a"
+    "hash": "ba0dea9307d0c4346c51e7770f4779439eb221952bbefe3363dda1641c4fee0e"
    }
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
