Experiment to further optimize node values based on mse diff with train test

--- a/notebooks/titanic.ipynb
+++ b/notebooks/titanic.ipynb
@@ -1352,13 +1352,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Results are identical for all models"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
@@ -1442,6 +1435,14 @@
     "\n",
     "plt.suptitle(f\"Dataset: Titanic - Test set\", fontsize=14);\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Suprisingly the results are identical for all models\n",
+    "- Even the original RF does not consider Passenger ID as a relevant feature"
    ]
   },
   {
@@ -1620,7 +1621,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- "
+    "- Original RF model DB rather unstable, but with highest AUC test score\n",
+    "- hsRF model still not very smooth, and worse than RF\n",
+    "- Smooth SHAP RF fails to draw a decision boundary -> high bias (always predict 0) and lowest AUC\n",
+    "- nodewise MSE RF shows most stable decision boundary which is mostly independent from Passenger ID and solely depends on age (prediction for age 0-10=1 \"survided\", rest \"0\"). Still AUC test score not as high as RF or hsRF"
    ]
   },
   {
